add ref to help development resource from help section

--- a/bundles/org.eclipse.platform.doc.isv/guide/help.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help.htm
@@ -13,6 +13,10 @@
 <H1>
 Plugging in help</H1>
 <P >
+<b>Note:</b> <i>The Eclipse help system is undergoing significant changes. Refer to
+<a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/platform-help-home/main.html"><b>Help Development Resources</b></a>
+on www.eclipse.org.</i>
+<P >
 The platform help system allows you to contribute your
 plug-in's online help using the <a href="../reference/extension-points/org_eclipse_help_contributions.html"> <b> org.eclipse.help.contributions</b></a> extension point. You can either contribute the online help as part of your code plug-in or provide it separately in its own documentation plug-in.</P>
 <P >
