--- a/bundles/org.eclipse.platform.doc.isv/guide/help.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help.htm
@@ -13,7 +13,7 @@
 <H1>
 Plugging in help</H1>
 <P >
-<b>Note:</b> <i>The Eclipse help system is undergoing significant changes. Refer to
+<b>Note:</b> <i>This chapter is to be reorganized and expanded to reflect the 2.0 changes. In the meantime, refer to
 <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/platform-help-home/main.html"><b>Help Development Resources</b></a>
 on www.eclipse.org.</i>
 <P >
