--- a/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
@@ -12,7 +12,7 @@
 <H1>
 Program debug and launching support</H1>
 <p>
-  In progress</p>
+  <b>Note:</b> <i>This chapter is under development.</i></p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 </BODY>
 </HTML>
