--- a/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
@@ -11,8 +11,41 @@
 <BODY BGCOLOR="#ffffff">
 <H1>
 Program debug and launching support</H1>
-<p>
-  <b>Note:</b> <i>This chapter is under development.</i></p>
+<p><b>Note:</b> <i>This chapter is under development.&nbsp; The following is an
+outline for the full content.</i></p>
+<p>Resources + builders = program.&nbsp; Once I have a program, what do I do
+with it?&nbsp; Platform provides capabilities to launch and debug programs,
+etc...</p>
+<h2>Launching a program</h2>
+<p>Discuss LaunchConfigurations, a Launch, and a Process.&nbsp; </p>
+<p>Can launch in run or debug mode.</p>
+<h3>Adding launchers to the platform</h3>
+<p>launchConfigTypes extension is used to add new types.</p>
+<p>Attributes of a launch configuration, the ability to persist and share them.</p>
+<p>status handlers and error handling.</p>
+<p>comparators and why you might need one.</p>
+<h3>Launch configuration UI</h3>
+<p>Launch configuration tab groups (and corresponding interfaces
+ILaunchConfigTab, etc.).&nbsp; Show screen snaps.</p>
+<p>Other UI extensions:&nbsp; typeImages and shortcuts.</p>
+<h2>Debugging a program</h2>
+<p>Discuss general debugging process:&nbsp; the source, the target program,
+events firing, etc.&nbsp; (Could use a picture here).</p>
+<h3>Platform debug model</h3>
+<p>Debug elements, the debug action interfaces, and debug events..</p>
+<p>source locator extension point</p>
+<h3>Breakpoints </h3>
+<p>Breakpoint events.</p>
+<p>Defining new types of breakpoints with the breakpoints extension point.</p>
+<h3>Expressions</h3>
+<p>Expression manager</p>
+<h3>Debug model presentation</h3>
+<p>UI code maps debug elements to UI.&nbsp; Show extension point.</p>
+<h3>Debug UI utility classes</h3>
+<p>DebugUITools, IDebugView/AbstractDebugView</p>
+<h3>Debug action groups</h3>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 </BODY>
 </HTML>
