--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
@@ -13,40 +13,53 @@
 Completing the plug-in manifest</h3>
 
 <P >
-We started this example by creating our plug-in and document files. Next we created topic files to describe the
-structure and navigation of our content. We then moved up one level above content, to the wiring and integration of our book. </P>
+We started this example by creating our plug-in and document files. Next we created
+toc files to describe the organization of our content.
+The remaining piece of work is to pull everything together into a master toc and
+update our <b> plugin.xml</b> to actually contribute the master toc.&nbsp; </P>
+
 <P >
-The one remaining piece of work is to update our <b> plugin.xml</b> to actually contribute the action, topics, and infoset files that we created. We start by updating the
-<b> plugin.xml</b> to contribute our
-infoset: </P>
+ We start by creating a <b>toc.xml</b> to contribute the three tocs we created
+ initially.&nbsp; Instead of providing an <b>href</b> for each topic, we use the
+ <b>link</b> attribute to refer to our existing toc files. </P>
+
+<font color='#4444CC'><pre>&lt;toc label=&quot;Online Help Sample&quot;&gt;
+	&lt;topic label=&quot;Concepts&quot;&gt;
+		&lt;link toc=&quot;toc_Concepts.xml&quot; /&gt;
+	&lt;/topic&gt;
+	&lt;topic label=&quot;Tasks&quot;&gt;
+		&lt;link toc=&quot;toc_Tasks.xml&quot; /&gt;
+	&lt;/topic&gt;
+	&lt;topic label=&quot;Reference&quot;&gt;
+		&lt;link toc=&quot;toc_Ref.xml&quot; /&gt;
+	&lt;/topic&gt;
+&lt;/toc&gt;</pre>
+</font>
+
+<P >
+ Then we update the <b>plugin.xml</b> to contribute our master toc: </P>
 <font color='#4444CC'><pre>
-   &lt;extension point=&quot;org.eclipse.help.contributions&quot;&gt;
-      &lt;infoset name=&quot;infoset_SampleGuide.xml&quot; /&gt;
-   &lt;/extension&gt;
-</pre></font>
-<P >
-Next we contribute the top-level topics, and the actions file that wires them into our
-infoset: </P>
-<font color='#4444CC'><pre>
-   &lt;extension point=&quot;org.eclipse.help.contributions&quot;&gt;
-      &lt;topics name=&quot;topics_view_Contents.xml&quot; /&gt;
-      &lt;actions name=&quot;actions_view_Contents.xml&quot; /&gt;
-   &lt;/extension&gt;
-</pre></font>
-<P >
-Lastly we contribute the bulk of our topics and wire them in: </P>
-<font color='#4444CC'><pre>
-   &lt;extension point=&quot;org.eclipse.help.contributions&quot;&gt;
-      &lt;topics name=&quot;topics_Concepts.xml&quot; /&gt;
-      &lt;topics name=&quot;topics_Tasks.xml&quot; /&gt;
-      &lt;topics name=&quot;topics_Ref.xml /&gt;
-      &lt;actions name=&quot;actions_All.xml&quot; /&gt;
-   &lt;/extension&gt;
-</pre></font>
-<P >
-That's it. If you copy your plug-in directory to the platform's <b> plugins</b> directory, start the platform, and choose
-<b> Help-&gt;Help Contents</b>, you should see the following in the &quot;Contents&quot;
-infoview:&nbsp; </P>
+   &lt;extension point=&quot;org.eclipse.help.toc&quot;&gt;
+      &lt;toc file=&quot;toc.xml&quot; <b>primary</b>=&quot;true&quot; /&gt;
+   &lt;/extension&gt;</pre></font>
+<P >Note the use of the <b>primary</b> attribute.&nbsp; Setting this attribute
+to true indicates that the toc should appear in the top level list of books in
+the help viewer.&nbsp; This is what makes our <b>toc.xml</b> file the
+&quot;master&quot; toc. </P>
+<P >Finally, we contribute our individual toc files. </P>
+<font color='#4444CC'><pre>   &lt;extension point=&quot;org.eclipse.help.toc&quot;&gt;
+       &lt;toc file=&quot;toc_Concepts.xml&quot; /&gt;
+       &lt;toc file=&quot;toc_Tasks.xml&quot; /&gt;
+       &lt;toc file=&quot;toc_Reference.xml&quot; /&gt;
+   &lt;/extension&gt;</pre></font>
+<P >These toc files will not appear in the top level list of books because we
+did not set the <b>primary</b> attribute.&nbsp; Toc files that are not
+designated as primary will only appear in the documentation web if they are
+referred to from some toc that is a primary toc or is linked in by a primary
+toc. </P>
+
+<P >That's it. If you copy your plug-in directory to the platform's <b> plugins</b> directory, start the platform, and choose
+<b> Help-&gt;Help Contents</b>, you should see the following: </P>
 
 <img border="0" src="images/help_contents.jpg" width="668" height="437">
 
