new help chapter structure

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
@@ -61,7 +61,7 @@ toc. </P>
 <P >That's it. If you copy your plug-in directory to the platform's <b> plugins</b> directory, start the platform, and choose
 <b> Help-&gt;Help Contents</b>, you should see the following: </P>
 
-<img border="0" src="images/help_contents.jpg" width="668" height="437">
+&lt;UPDATED SCREEN SNAP&gt;
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
