--- a/bundles/org.eclipse.platform.doc.isv/guide/help_infopops.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_infopops.htm
@@ -14,8 +14,13 @@ Infopops
 <H2>
 Infopops</H2>
 
-<font color='#4444CC'><p>
-   &nbsp;
+<font color='#4444CC'><p>An infopop is a small window associated with a
+particular SWT widget in a plug-in's user interface.&nbsp; It displays
+context-sensitive help and links to related help topics for the widget.&nbsp; It
+is activated when the user puts focus on the widget and presses the F1 key.
+</p><p>To associate an infopop with a widget, you must first assign a context ID
+to the widget and then provide the description and links for the infopop.
+</p><p>&lt;SHOW SCREEN SNAP OF INFOPOP on the WORKBENCH&gt;
 </p></font>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
