--- a/bundles/org.eclipse.platform.doc.isv/guide/help_infopops_id.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_infopops_id.htm
@@ -4,16 +4,40 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Declaring a context ID</TITLE>
+<TITLE>Declaring a context id</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
-Declaring a context ID</h3>
+Declaring a context id</h3>
 
-<P >
- &nbsp; </P>
+<P >The <b>setHelp</b> method in <b><a href="../reference/api/org/eclipse/ui/help/WorkbenchHelp.html">org.eclipse.ui.help.WorkbenchHelp</a></b>
+is used to associate a context id with a Control, IAction, Menu, or MenuItem.&nbsp;
+The context id should be fully qualified with the plug-in id.&nbsp; For example,
+the following snippet associates the id &quot;com.example.helpexample.panic_button&quot;
+with a button in the application. </P>
+
+
+<pre ><font color="#000080">WorkbenchHelp.setHelp(myButton, com.example.helpexample.panic_button);</font></pre>
+
+
+<P >The following UI controls cannot have context ids (and therefore cannot have
+infopops): </P>
+
+
+<ul>
+  <li>Toolbar buttons (ToolItem)</li>
+  <li>CTabItem</li>
+  <li>TabItem</li>
+  <li>TableColumn</li>
+  <li>TableItem</li>
+  <li>TableTreeItem</li>
+  <li>TreeItem</li>
+</ul>
+<p>Widgets that do not get focus should not be assigned context ids, since they
+will never trigger an infopop.</p>
+<p>&nbsp;</p>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
