--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -14,6 +14,16 @@ Active help
 <H2>
 Active help</H2>
 
+<p>Active help is the ability to invoke a workbench action from on-line
+documentation.&nbsp; </p>
+
+<p>Instead of writing, &quot;Go to the Window Menu and open the Preferences
+Dialog,&quot; your on-line help can include a link that will open the
+Preferences Dialog for the user.&nbsp; Active help links look like hyperlinks in
+the on-line help.</p>
+
+<p>&lt;SCREEN SNAP OF SOME WORKBENCH ACTIVE HELP&gt;</p>
+
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
 </BODY>
