--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
@@ -13,6 +13,13 @@
 Writing the help action</h3>
 
 
+<p>The interface <a href="../reference/api/org/eclipse/help/ILiveHelpAction.html"><b>ILiveHelpAction</b></a>
+is used to build an active help action.</p>
+
+
+<pre>SHOW A CLASS THAT OPENS THE PREF DIALOG (or some other simple example that needs little context.)</pre>
+
+
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
 
