--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -13,7 +13,27 @@
 Invoking the action from HTML</h3>
 
 <P >
- &nbsp; </P>
+ To include active help links in your documentation, you must first declare the
+ use of the active help javascript in the <b>HEAD</b> tag of your HTML: </P>
+
+
+<pre > &lt;script language=&quot;JavaScript&quot; scr=&quot;../org.eclipse.help/livehelp.js&gt; &lt;/script&gt;</pre>
+
+
+<P >
+ In the body of your documentation, you refer to your action implementation in
+ javascript. </P>
+
+
+<pre > &lt;a href='javascript:liveAction(
+	&quot;com.example.helpexample&quot;, 
+	&quot;com.example.helpExample.OpenPreferencesAction&quot;)'&gt;Click here for Preferences.&lt;/a&gt;</pre>
+
+
+<P >The parameters for <b>liveAction </b>must include first the plug-in that
+contains the action and then the name of the class that implements the
+action.&nbsp; Any other parameters needed by your action should be
+appended.&nbsp; Extra parameters are passed as strings to your action class. </P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
