*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/arch_struct.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/arch_struct.htm
@@ -98,7 +98,7 @@ level documentation configurations.</P>
 
 
 
-<H3>Team and Repository Provider Support</H3>
+<H3>Team support</H3>
 
 
 
@@ -110,7 +110,7 @@ in the SDK.&nbsp;&nbsp;</p>
 
 
 
-<p>Team support is described in <a href="team.htm">Team and repository API</a>.</p>
+<p>Team support is described in <a href="team.htm">Team support</a>.</p>
 
 
 
