--- a/bundles/org.eclipse.platform.doc.isv/guide/int_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/int_eclipse.htm
@@ -107,8 +107,7 @@ Help system</H4>
     <td width="40%">
 
 
-<H4>
-Version and configuration management (VCM)</H4>
+<H4>Team support</H4>
     </td>
     <td width="60%">Defines a team programming model for managing and versioning resources.&nbsp;</td>
   </tr>
