--- a/bundles/org.eclipse.platform.doc.isv/guide/team.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team.htm
@@ -4,13 +4,13 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Team and repository API</TITLE>
+<TITLE>Team support</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>
-Team and repository API</H1>
+Team support</H1>
 <p>
 <b>Note:</b> <i>This chapter is under development.&nbsp; The following is an
 outline for the full content.</i>
