*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -22,7 +22,13 @@ Dialog,&quot; your on-line help can include a link that will open the
 Preferences Dialog for the user.&nbsp; Active help links look like hyperlinks in
 the on-line help.</p>
 
-<p>&lt;SCREEN SNAP OF SOME WORKBENCH ACTIVE HELP&gt;</p>
+<p>Below is an active help link that takes you to the preferences dialog.&nbsp;
+We will take a look at how to make this work.</p>
+
+<p>&lt;NEED TO IMPLEMENT THIS AND INCLUDE IN THE DOC PLUG-IN IF WE ARE TO SHOW
+THIS IN PRACTICE.&gt;</p>
+
+<p><a href="http://">Click here to open the preferences dialog.</a></p>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
