--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -17,7 +17,12 @@ Invoking the action from HTML</h3>
  use of the active help javascript in the <b>HEAD</b> tag of your HTML: </P>
 
 
-<pre > &lt;script language=&quot;JavaScript&quot; scr=&quot;../org.eclipse.help/livehelp.js&gt; &lt;/script&gt;</pre>
+<pre ><font color="#4444CC"> &lt;script language=&quot;JavaScript&quot; src=&quot;../org.eclipse.help/livehelp.js&gt; &lt;/script&gt;</font></pre>
+
+
+<P >
+ &lt;NEED TO CLARIFY WHAT THE PATH ABOVE IS.&nbsp; LITERAL OR
+ INTER-PLUG-IN??&gt; </P>
 
 
 <P >
@@ -25,15 +30,16 @@ Invoking the action from HTML</h3>
  javascript. </P>
 
 
-<pre > &lt;a href='javascript:liveAction(
+<pre ><font color="#4444CC"> &lt;a href='javascript:liveAction(
 	&quot;com.example.helpexample&quot;, 
-	&quot;com.example.helpExample.OpenPreferencesAction&quot;)'&gt;Click here for Preferences.&lt;/a&gt;</pre>
+	&quot;com.example.helpExample.activeHelp.ActiveHelpOpenPreferencesAction&quot;,
+	&quot;&quot;)'&gt;Click here for Preferences.&lt;/a&gt;</font></pre>
 
 
 <P >The parameters for <b>liveAction </b>must include first the plug-in that
 contains the action and then the name of the class that implements the
-action.&nbsp; Any other parameters needed by your action should be
-appended.&nbsp; Extra parameters are passed as strings to your action class. </P>
+action.&nbsp; The third parameter will be passed as a String to the live help
+action using its <b>setInitializationString</b> method. </P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
