*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
@@ -12,14 +12,13 @@
 <H1>
 Program debug and launching support</H1>
 <p>The resource plug-ins in the Eclipse platform allow you to manage a set a
-resources and use incremental project builders to transform them into other
-resources or artifacts.&nbsp; When the resources you are working with are source
-files for a program, a compiler is used to build the source files into an
-executable program.&nbsp; Once the program is built, how does a plug-in invoke
+source files for a program and compile them using an incremental project
+builder.&nbsp; Once an executable program is built, how does a plug-in invoke
 it?&nbsp;</p>
-<p>The org.eclipse.debug.core plug-in provides the API that allow you to
+<p>The <b><a href="http://../reference/api/org/eclipse/debug/core/packages.html"> org.eclipse.debug.core</a>
+</b> plug-in provides the API that allow you to
 describe the method for launching a program in order to run or debug it.&nbsp;
-The org.eclipse.debug.ui plug-in includes support for user configuration of
+The <b><a href="http://../reference/api/org/eclipse/debug/ui/packages.html"> org.eclipse.debug.ui</a></b> plug-in includes support for user configuration of
 launch parameters and implementation of powerful debuggers.</p>
 <p>&nbsp;</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
