*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch.htm
@@ -11,7 +11,7 @@
 <BODY BGCOLOR="#ffffff">
 <h2>Launching a program</h2>
 <p>Discuss LaunchConfigurations, a Launch, and a Process.&nbsp; </p>
-<p>Can launch in run or debug mode...</p>
+<p>Can launch in run or debug mode.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
