*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -17,17 +17,19 @@ Invoking the action from HTML</h3>
  use of the active help javascript in the <b>HEAD</b> tag of your HTML: </P>
 
 
-<pre ><font color="#4444CC"> &lt;script language=&quot;JavaScript&quot; src=&quot;../org.eclipse.help/livehelp.js&gt; &lt;/script&gt;</font></pre>
+<pre ><font color="#4444CC"> &lt;script language=&quot;JavaScript&quot; src=&quot;../../org.eclipse.help/livehelp.js&gt; &lt;/script&gt;</font></pre>
+
+
+<P >The live help javascript is located in the <b>org.eclipse.help</b>
+plug-in.&nbsp; You can refer to it using the help system's <a href="help_plugin_files.htm#help_plugin_files_xref">cross
+plug-in referencing</a> technique.&nbsp; In this example, the document with the
+active help link is located in the subdirectory <b>guide</b> underneath our
+plug-in directory.&nbsp; So we must navigate up two directories to reach the
+plug-in root and then refer to the <b>org.eclipse.help</b> plug-in. </P>
 
 
 <P >
- &lt;NEED TO CLARIFY WHAT THE PATH ABOVE IS.&nbsp; LITERAL OR
- INTER-PLUG-IN??&gt; </P>
-
-
-<P >
- In the body of your documentation, you refer to your action implementation in
- javascript. </P>
+ In the body of your documentation, you invoke the liveAction script. </P>
 
 
 <pre ><font color="#4444CC"> &lt;a href='javascript:liveAction(
@@ -36,10 +38,17 @@ Invoking the action from HTML</h3>
 	&quot;&quot;)'&gt;Click here for Preferences.&lt;/a&gt;</font></pre>
 
 
-<P >The parameters for <b>liveAction </b>must include first the plug-in that
-contains the action and then the name of the class that implements the
-action.&nbsp; The third parameter will be passed as a String to the live help
-action using its <b>setInitializationString</b> method. </P>
+<P >The parameters for <b>liveAction </b> include&nbsp; </P>
+
+
+<ul>
+  <li> the plug-in that
+contains the action</li>
+  <li>the name of the class that implements the action</li>
+  <li>a String that will be passed to the live help action using <b>setInitializationString</b>.&nbsp;
+    In our case, we don't need to pass a parameter from the page, so we just
+    pass an empty string.</li>
+</ul>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
