--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_files.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_files.htm
@@ -47,6 +47,9 @@ file for documents before it looks in the plug-in directory itself.&nbsp; When u
 <pre ><font color='#4444CC'>   &lt;topic label=&quot;Ref1&quot; href=&quot;http://www.example.com/myReference.html&quot;/&gt;</font></pre>
 
 
+<h4 ><a name="help_plugin_files_xref">Cross plug-in referencing</a></h4>
+
+
 <P >The <b>href</b> argument can also refer to content from another
 plug-in.&nbsp; This is done by using a special cross plug-in referencing
 notation that is resolved by the help server: </P>
@@ -61,6 +64,15 @@ following topic: </P>
 
 
 <pre ><font color='#4444CC'>   &lt;topic label=&quot;Help Chapter in Platform Doc&quot; href=&quot;<b>../org.eclipse.platform.doc.isv/guide/help.html</b>&quot;/&gt;</font></pre>
+
+
+<p class="Note">Note:&nbsp; When referencing content from another plug-in, be
+sure to use the plug-in's <b>id</b>, as declared in its <b>plugin.xml </b>file,
+not its directory name.&nbsp; While these are often the same in practice, it's
+important to check that you are using the id and not the directory name.</p>
+
+
+<pre >&nbsp;</pre>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
