*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
@@ -31,24 +31,26 @@ action.&nbsp; We don't need any information from the javascript, so the
 initialization data is ignored.</p>
 
 
-<p>(<b>Note</b>:&nbsp; The class <b>OpenPreferencesAction</b> is internal to the
+<p class="Note">Note:&nbsp; The class <b>OpenPreferencesAction</b> is internal to the
 workbench.&nbsp; In this example, we are using it at our own risk since it could
-change in the future.)</p>
+change in the future.</p>
 
 
-<pre><font color="#4444CC">package com.example.helpExample.activeHelp;
+<pre><font color="#4444CC">package org.eclipse.platform.doc.isv.activeHelp;
 
 import org.eclipse.help.ILiveHelpAction;
 import org.eclipse.ui.internal.OpenPreferencesAction
 
 /**
-* Action to be invoked from a help document
+* Sample Active Help action.
+</font>* Note:  This action referes to internal workbench actions in order to
+* open the preferences page.<font color="#4444CC">
 */
 public class ActiveHelpOpenPreferencesAction implements ILiveHelpAction {
   String str;
 
   public void setInitializationString(String data) {
-    //ignore the data.  We don't use parameters.
+    //ignore the data.  We do not use any javascript parameters.
   }
 
   public void run() {
