--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -17,7 +17,7 @@ Invoking the action from HTML</h3>
  use of the active help javascript in the <b>HEAD</b> tag of your HTML: </P>
 
 
-<pre ><font color="#4444CC"> &lt;script language=&quot;JavaScript&quot; src=&quot;../../org.eclipse.help/livehelp.js&gt; &lt;/script&gt;</font></pre>
+<pre ><font color="#4444CC"> &lt;script&gt; language=&quot;JavaScript&quot; src=&quot;../../org.eclipse.help/livehelp.js&gt; &lt;/script&gt;</font></pre>
 
 
 <P >The live help javascript is located in the <b>org.eclipse.help</b>
