--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -2,7 +2,7 @@
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
+<script> language="JavaScript" src="../../org.eclipse.help/livehelp.js> </script>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
 Active help
@@ -25,10 +25,12 @@ the on-line help.</p>
 <p>Below is an active help link that takes you to the preferences dialog.&nbsp;
 We will take a look at how to make this work.</p>
 
-<p>&lt;NEED TO IMPLEMENT THIS AND INCLUDE IN THE DOC PLUG-IN IF WE ARE TO SHOW
-THIS IN PRACTICE.&gt;</p>
+<p><a href='javascript:liveAction(
+	"com.example.helpexample", 
+	"com.example.helpExample.activeHelp.ActiveHelpOpenPreferencesAction",
+	"")'>Click here to open the preferences dialog.</a></p>
 
-<p><a href="http://">Click here to open the preferences dialog.</a></p>
+<p>&nbsp;</p>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
