--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -2,7 +2,7 @@
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-<script> language="JavaScript" src="../../org.eclipse.help/livehelp.js> </script>
+<script language="JavaScript" src="../../org.eclipse.help/livehelp.js> </script>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
 Active help
