--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -2,15 +2,14 @@
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-<script language="JavaScript" src="../../org.eclipse.help/livehelp.js> </script>
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
 Active help
 </TITLE>
+<script language="JavaScript" src="../../org.eclipse.help/livehelp.js"> </script>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
-<BODY BGCOLOR="#ffffff">
 <H2>
 Active help</H2>
 
@@ -34,5 +33,5 @@ We will take a look at how to make this work.</p>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
-</BODY>
 </HTML>
+</script>
