*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -25,8 +25,8 @@ the on-line help.</p>
 We will take a look at how to make this work.</p>
 
 <p><a href='javascript:liveAction(
-	"com.example.helpexample", 
-	"com.example.helpExample.activeHelp.ActiveHelpOpenPreferencesAction",
+	"org.eclipse.platform.doc.isv", 
+	"org.eclipse.platform.doc.isv.activeHelp.ActiveHelpOpenPreferencesAction",
 	"")'>Click here to open the preferences dialog.</a></p>
 
 <p>&nbsp;</p>
