--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -33,8 +33,8 @@ plug-in root and then refer to the <b>org.eclipse.help</b> plug-in. </P>
 
 
 <pre ><font color="#4444CC"> &lt;a href='javascript:liveAction(
-	&quot;com.example.helpexample&quot;, 
-	&quot;com.example.helpExample.activeHelp.ActiveHelpOpenPreferencesAction&quot;,
+	&quot;org.eclipse.platform.doc.isv&quot;, 
+	&quot;org.eclipse.platform.doc.isv.activeHelp.ActiveHelpOpenPreferencesAction&quot;,
 	&quot;&quot;)'&gt;Click here for Preferences.&lt;/a&gt;</font></pre>
 
 
