*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config_install.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config_install.htm
@@ -4,17 +4,20 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Packaging and delivering Eclipse based products</TITLE>
+<TITLE>Installation guidelines</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>
-Packaging and delivering Eclipse based products</H1>
-<p><b>Note:</b> <i>This chapter is under development.&nbsp;&nbsp;</i></p>
-<p>
-  Intro - can use good wording from existing &quot;Eclipse-based Products and
-  Extensions&quot; doc</p>
+<h3>Installation guidelines</h3>
+<p>No install tool is assumed.&nbsp; Can use your favorite native installer.</p>
+<p>Overview of installation procedure includes:</p>
+<ul>
+  <li>sample directory structure</li>
+  <li>marker files</li>
+  <li>location of data vs. program (for uninstall and multi-user issues)</li>
+</ul>
+<p>Refer to install ref doc for the details.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
