--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_fragments.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_fragments.htm
@@ -4,17 +4,15 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Packaging and delivering Eclipse based products</TITLE>
+<TITLE>Fragments</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>
-Packaging and delivering Eclipse based products</H1>
-<p><b>Note:</b> <i>This chapter is under development.&nbsp;&nbsp;</i></p>
-<p>
-  Intro - can use good wording from existing &quot;Eclipse-based Products and
-  Extensions&quot; doc</p>
+<h3>Fragments</h3>
+<p>Fragments and use for NLS packaging of strings, etc.</p>
+<p>Refer to <a href="product_nls.htm">NLS considerations.</a></p>
+<p>Refer to PDE doc?</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
