--- a/bundles/org.eclipse.platform.doc.isv/guide/product_nls.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_nls.htm
@@ -5,16 +5,17 @@
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
-Externalizing Strings
+National language considerations
 </TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>
-Externalizing Strings</H2>
+National Language Considerations</H2>
 <P >&lt;Need to discuss NLS issues, fragments, etc.&nbsp; Here is old content
 from the help doc&gt; </P>
+<h3 >Externalizing Strings </h3>
 <P >We can externalize the strings in our <b>plugin.xml </b> files
 by replacing the string with a key (e.g. <b>%pluginName</b>) and creating an entry in the
 <b> plugin.properties</b> file of the form: </P>
