--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config_about.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config_about.htm
@@ -4,17 +4,15 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Packaging and delivering Eclipse based products</TITLE>
+<TITLE>About dialog</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>
-Packaging and delivering Eclipse based products</H1>
-<p><b>Note:</b> <i>This chapter is under development.&nbsp;&nbsp;</i></p>
-<p>
-  Intro - can use good wording from existing &quot;Eclipse-based Products and
-  Extensions&quot; doc</p>
+<h3>About dialog</h3>
+<p>Features and plug-ins supply about.html.</p>
+<p>Features supply about.ini (and possibly about.properties and about.mappings).&nbsp;
+Include format/examples and screen shots of such files.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
