--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_feature.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_feature.htm
@@ -4,17 +4,16 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Packaging and delivering Eclipse based products</TITLE>
+<TITLE>Features</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>
-Packaging and delivering Eclipse based products</H1>
-<p><b>Note:</b> <i>This chapter is under development.&nbsp;&nbsp;</i></p>
-<p>
-  Intro - can use good wording from existing &quot;Eclipse-based Products and
-  Extensions&quot; doc</p>
+<h3>Features</h3>
+<p>Definition.&nbsp; Groups of plug-ins, but doesn't contain the plug-ins.&nbsp;
+Only refers to them.&nbsp; The notion of features is not relevant to the end
+user, just to the update manager.&nbsp; (Refer to feature archive format
+reference doc)</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
