--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
@@ -4,17 +4,15 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Packaging and delivering Eclipse based products</TITLE>
+<TITLE>Primary feature</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>
-Packaging and delivering Eclipse based products</H1>
-<p><b>Note:</b> <i>This chapter is under development.&nbsp;&nbsp;</i></p>
-<p>
-  Intro - can use good wording from existing &quot;Eclipse-based Products and
-  Extensions&quot; doc</p>
+<h3>Primary feature</h3>
+<p>Controls branding stuff.&nbsp; (splash, about, welcome, default perspective -
+how/where is this specified?)</p>
+<p>Can be more than one, but only one at a time.&nbsp; </p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
