*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def.htm
@@ -11,7 +11,51 @@
 <BODY BGCOLOR="#ffffff">
 <h2>
   What is a product?</h2>
-<p>Define product and show an example dir structure</p>
+<p>An Eclipse based <b>product</b> is a stand-alone program built with Ecilpse.&nbsp;
+Products include all the code and plug-ins needed to run them.&nbsp; This
+includes a Java runtime environment (JRE) and the Eclipse platform code.&nbsp;
+The plug-in code, JRE, and Eclipse platform are typically installed with a
+product-specific installation program.&nbsp; Product providers are free to use
+any installation tool or program that is appropriate for their needs.&nbsp; </p>
+<p>Once installed, the user launches the product and is presented with an
+Eclipse workbench configured specifically for the purpose supported by the
+product, such as web development, C++ program development, or any other
+purpose.&nbsp; The platform makes it easy to configure labels, about dialogs,
+graphics, and splash screens, so that the user has no concept of a platform
+workbench, but instead views the workbench as the main window of the product
+itself.</p>
+<p>The top level directory structure of such a product looks something like this
+for a hypothetical product called &quot;AcmeWeb&quot; that has been installed on
+a Windows platform:</p>
+<pre><font color="#4444CC">acmeweb/
+</font>	<font color="#4444CC">acmeweb.exe</font>		(product executable)
+	<font color="#4444CC">eclipse/</font>		(directory for installed Eclipse files)
+		<font color="#4444CC">.eclipseproduct</font>	(marker file)
+		<font color="#4444CC">eclipse.exe	
+		startup.jar	
+		install.ini	
+		.config/	
+			platform.cfg
+		jre/
+		features/</font>	(installed features)
+			<font color="#4444CC">com.example.acme.acmefeature_1.0.0/
+				feature.xml
+			org.eclipse.platform_2.0.0/
+			org.eclipse.platform.win32_2.0.0/
+		plugins/
+			com.example.acme.acmefeature_1.0.0/
+				plugin.xml
+				about.ini
+				acme.gif
+				plugin_customization.ini
+				splash.jpg
+			com.example.acme.acmewebsupport_1.0.0/
+			org.eclipse.platform_2.0.0/
+			...
+		links/
+			...</font></pre>
+<p>Let's take a look at what this means in more detail.&nbsp; We'll
+look first at the concept of Eclipse <b><a href="product_def_feature.htm">features</a></b>.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
