--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_plugins.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_plugins.htm
@@ -9,8 +9,34 @@
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>Plug-ins</h3>
-<p>How plug-ins map to features, fragments, etc.&nbsp; Plugin archive format.</p>
+<h3>Plug-ins and fragments</h3>
+<p>Features are described in terms of the plug-ins that comprise them.&nbsp;
+This means that plug-ins are the fundamental unit for packaging
+function.&nbsp;&nbsp;</p>
+<p>While features are organized for the purposes of distributing and updating
+products, plug-ins are organized to facilitate the development of the product
+function among the product team.&nbsp; The development team determines when to
+carve up program function into a separate plug-in.&nbsp;&nbsp;</p>
+<p>Plug-ins are packaged in a <a href="../reference/misc/plugin_archive.html">plug-in
+archive</a> file and described using a <a href="../reference/misc/rplugman.html">plug-in
+manifest file</a>, <b>plugin.xml</b>.&nbsp;&nbsp;</p>
+<p>Plug-in <b>fragments</b> are separately packaged files whose contents are
+treated as if they were in the original plug-in archive file.&nbsp; They are
+useful for adding plug-in functionality, such as additional national language
+translations, to an existing plug-in after it has been installed.&nbsp;
+Fragments are ideal for shipping function that may trail the initial product
+release, since they can be used to add function without repackaging or
+reinstalling the original plug-in.&nbsp; When a fragment is detected by the
+platform, its contents are merged with the function in the original
+plug-in.&nbsp; In other words, if you query the platform plug-in registry, you
+would see the extensions and other function provided in the fragment as if it
+was in the original plug-in.</p>
+<p>Fragments are described using a fragment manifest file, <b>fragment.xml.</b>&nbsp;
+It is similar to the plug-in manifest file.&nbsp; Since a fragment shares many
+properties with its plug-in, some attributes in the plug-in manifest are not
+valid, such as the plug-in class and plug-in imports.</p>
+<p><a href="../reference/misc/plugin_archive.html">Plug-in
+archive</a> files can contain plug-ins or fragments.&nbsp; </p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
