--- a/bundles/org.eclipse.platform.doc.isv/guide/product.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product.htm
@@ -11,10 +11,24 @@
 <BODY BGCOLOR="#ffffff">
 <H1>
 Packaging and delivering Eclipse based products</H1>
-<p><b>Note:</b> <i>This chapter is under development.&nbsp;&nbsp;</i></p>
 <p>
-  Intro - can use good wording from existing &quot;Eclipse-based Products and
-  Extensions&quot; doc</p>
+  The Eclipse platform is designed so you can add plug-ins that provide function
+  for the software development tools community.&nbsp; Commercial software
+  vendors can build, brand, and package products using the platform as a base
+  technology.&nbsp; These products can be sold and supported commercially.&nbsp;
+</p>
+<p>
+  The Eclipse SDK can be downloaded and used as a Java IDE and Eclipse plug-in
+  development tool, but it is not marketed as a commercial product.&nbsp; The
+  platform provides the raw ingredients for a product without a box, label, or
+  price tag.&nbsp; It defines a file and directory structure that lets you
+  easily customize the platform's about dialog and splash screen to brand your
+  product.</p>
+<p>
+  The license governing the Eclipse platform gives you a lot of freedom over how
+  to build and configure a product.&nbsp; However, Eclipse based products will
+  coexist more easily on a user's system if the products use similar standards
+  for packaging, configuring, and installing their products.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
