--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
@@ -10,9 +10,29 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>Primary feature</h3>
-<p>Controls branding stuff.&nbsp; (splash, about, welcome, default perspective -
-how/where is this specified?)</p>
-<p>Can be more than one, but only one at a time.&nbsp; </p>
+<p>When the Eclipse platform is started, exactly one feature gets to control the
+overall &quot;personality&quot; or &quot;branding&quot; of the platform,
+including the splash screen, window images, about box, welcome page, and other
+customizable aspects of the platform.&nbsp; This feature is called the product's
+<b>primary feature</b>.</p>
+<p>Let's look again at the description of the platform feature in its platform
+manifest:</p>
+<pre><font color="#4444CC">feature 
+	id=&quot;org.eclipse.platform&quot; 
+	label=&quot;%featureName&quot; 
+	version=&quot;2.0.0&quot; 
+	provider-name=&quot;%providerName&quot; 
+	<b>primary=&quot;true&quot;</b> 
+	application=&quot;org.eclipse.ui.workbench&quot;&gt;</font></pre>
+<p>The platform feature has been designated as a primary feature. Although it's
+possible to designate many features as primary features in the feature.xml file,
+only one primary feature gets control when the platform is launched.&nbsp; The
+primary feature is specified using the <b>-feature</b> command line option of
+eclipse.exe.&nbsp; Typically, a product only defines branding information for
+one feature and designates this feature as the primary feature.&nbsp; </p>
+<p>&lt;NEED TO EXPLAIN RELATIONSHIP BETWEEN PRIMARY FEATURE AND PRIMARY FEATURE
+PLUG-IN.&nbsp; How is it specified?&nbsp; Because it has the same name?&nbsp;
+How do I know which plug-in to put the splah.bmp in, etc.?&gt;</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
